ecom.yml
#Order service
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: order

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: ecom-order
      containers:
      - name: order
        image: ghcr.io/willyardiyanto/order-service:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
