ecom-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecom-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - ports:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecom
spec:
  hosts:
  - "*"
  gateways:
  - ecom-gateway
  http:
  - match:
    - uri:
        exact: /order
    route:
    - destination:
        host: order
